// Copyright 2024 TII (SSRC) and the Ghaf contributors
// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";
option go_package = "givc/modules/api/systemd";
package systemd;

message UnitStatus {
    string Name = 1;
	string Description = 2;
	string LoadState = 3;
	string ActiveState = 4;
    string SubState = 5;
	string Path = 6;
    string FreezerState = 7;
}

message UnitRequest {
    string UnitName = 1;
}

message AppUnitRequest {
    string UnitName = 1;
    repeated string Args = 2;
}

message UnitResponse {
    UnitStatus UnitStatus = 1;
}

message UnitResourceRequest {
    string UnitName = 1;
}

message UnitResourceResponse {
    double cpu_usage = 1;
    float memory_usage = 2;
}

service UnitControlService {
    rpc StartApplication(AppUnitRequest) returns (UnitResponse) {}
    rpc StartUnit(UnitRequest) returns (UnitResponse) {}
    rpc StopUnit(UnitRequest) returns (UnitResponse) {}
    rpc KillUnit(UnitRequest) returns (UnitResponse) {}
    rpc FreezeUnit(UnitRequest) returns (UnitResponse) {}
    rpc UnfreezeUnit(UnitRequest) returns (UnitResponse) {}
    rpc GetUnitStatus(UnitRequest) returns (UnitResponse) {}
    rpc MonitorUnit(UnitResourceRequest) returns (stream UnitResourceResponse) {}
}